argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qynx-merchant-portal
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qynx-merchant-portal
      role: qynx-merchant-portal
  template:
    metadata:
      labels:
        app: qynx-merchant-portal
        role: qynx-merchant-portal
    spec:
      containers:
        - name: qynx-merchant-portal
          image: ghcr.io/npstx-mumbai/qynx-merchant-portal:0.0.3-test
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      #           resources:
      #             requests:
      #              # cpu: 100m
      #               memory: 2G
      #             limits:
      #              # cpu: 100m
      #               memory: 4G
      imagePullSecrets:
        - name: dockerconfigjson-github-com
