argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qynx-portal-app-service
  namespace: prod
spec:
  selector:
    app: qynx-portal
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
